# dbus-python

./: .gitignore  .travis.yml  Makefile.am  NEWS  configure.ac  setup.py
_dbus_bindings/: Makefile.am  dbus_bindings-internal.h  message-append.c  module.c  server.c
_dbus_glib_bindings/: Makefile.am
dbus/: _version.py.in  decorators.py  exceptions.py  proxies.py  service.py
dbus_bindings/: bytes.c  conn.c  containers.c  int.c  message-append.c  message-get-args.c  message.c  signature.c  string.c  unixfd.c
dbus_glib_bindings/: module.c
doc/: HACKING.txt  PY3PORT.txt  dbus.bus.rst  dbus.connection.rst  dbus.decorators.rst  dbus.exceptions.rst  dbus.gi_service.rst  dbus.glib.rst  dbus.lowlevel.rst  dbus.mainloop.rst  dbus.proxies.rst  dbus.server.rst  dbus.service.rst  dbus.types.rst  index.rst  redirects  redirects.py
examples/: Makefile.am  gconf-proxy-client.py  gconf-proxy-service2.py
m4/: Makefile.am
test/: Makefile.am  cross-test-client.py  cross-test-server.py  import-repeatedly.c  run-test.sh  test-client.py  test-exception-py2.py  test-exception-py3.py  test-p2p.py  test-server.py  test-service.py  test-signals.py  test-standalone.py  test-unusable-main-loop.py
tools/: ci-build.sh  travis-ci-setup.sh
