EXTRA_DIST = \
	     example-async-client.py \
	     example-client.py \
	     example-service.py \
	     example-signal-emitter.py \
	     example-signal-recipient.py \
	     gconf-proxy-client.py \
	     gconf-proxy-service2.py \
	     list-system-services.py \
	     unix-fd-client.py \
	     unix-fd-service.py
